--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -2,9 +2,11 @@
 	display: flex
 	flex-direction: column
 	align-items: flex-end
-	position: fixed
-	bottom: 40px
-	right: 200px
+	position: absolute
+	right: 50px
+	bottom: 30px
+	//bottom: 40px
+	//right: 200px
 	&__line
 			opacity: 0.5
 			//margin-right: 50px
